# FastAPP

./: .gitignore  pyproject.toml
