[tool.poetry]
name = "fastapp"
version = "0.1.0"
description = ""
authors = ["Yaroslav <yarikbritov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlmodel = "^0.0.16"
fastui = "^0.5.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
